--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 
 <nav>
     <div class="nav-container">
-        <a class="logo" onclick="loadPage('home')">🛡️ Privacy Guide</a>
+        <!-- The 'true' argument tells loadPage that this is the home page -->
+        <a class="logo" onclick="loadPage('pages/home.html', true)">🛡️ Privacy Guide</a>
         <ul class="nav-links">
-            <li><a onclick="loadPage('home')">Home</a></li>
-            <li><a onclick="loadPage('about')">About</a></li>
-            <li><a onclick="loadPage('terms')">Terms of Service</a></li>
-            <li><a onclick="loadPage('privacy')">Privacy Policy</a></li>
+            <li><a onclick="loadPage('pages/home.html', true)">Home</a></li>
+            <li><a onclick="loadPage('pages/about.html')">About</a></li>
+            <li><a onclick="loadPage('pages/terms.html')">Terms of Service</a></li>
+            <li><a onclick="loadPage('pages/privacy.html')">Privacy Policy</a></li>
         </ul>
     </div>
 </nav>
