--- a/pages/home.html
+++ b/pages/home.html
@@ -16,6 +16,7 @@
                 <select id="categoryFilter">
                     <option value="all">All Categories</option>
                     <option value="social">Social Media</option>
+                    <option value="messaging">Messaging</option>
                     <option value="search">Search Engines</option>
                 </select>
             </div>
