--- a/pages/services/discord.html
+++ b/pages/services/discord.html
@@ -4,7 +4,7 @@
         <div class="detail-header">
             <div class="header-content-wrapper">
                 <h1 class="detail-title">Discord</h1>
-                <p class="detail-subtitle">Social Media • Privacy Rating: 9/10</p>
+                <p class="detail-subtitle">Messaging • Privacy Rating: 9/10</p>
             </div>
             <div class="rating-container">
                 <div class="rating-label">
