--- a/pages/home.html
+++ b/pages/home.html
@@ -61,6 +61,21 @@
         </div>
 
         <div class="services-grid" id="servicesGrid">
+        <div class="legend-card">
+            <h3 class="legend-title">Icon Legend</h3>
+            <div class="legend-item">
+                <span class="legend-icon">✅</span>
+                <span class="legend-text">Indicates 'Yes' or 'Fully' implemented.</span>
+            </div>
+            <div class="legend-item">
+                <span class="legend-icon">🟡</span>
+                <span class="legend-text">Indicates 'Partially' implemented or has significant caveats.</span>
+            </div>
+            <div class="legend-item">
+                <span class="legend-icon">❌</span>
+                <span class="legend-text">Indicates 'No' or 'None'.</span>
+            </div>
         </div>
+
     </div>
 </div>
