--- a/pages/home.html
+++ b/pages/home.html
@@ -3,7 +3,7 @@
         <header>
             <div class="header-content-wrapper">
                 <h1>Privacy Guide</h1>
-                <p class="subtitle">Services are rated on how private & secure they are, not on whether it's a good service or not. If an app is rated 1/10 that doesn't mean it's the best app ever, it just means that app respects your privacy.</p>
+                <p class="subtitle">Put description of website here.</p>
             </div>
             <div class="last-updated">
                 <strong>Last Updated:</strong> July 7th, 2025
