--- a/pages/home.html
+++ b/pages/home.html
@@ -3,7 +3,7 @@
         <header>
             <div class="header-content-wrapper">
                 <h1>Privacy Guide</h1>
-                <p class="subtitle">Put description of website here.</p>
+                <p class="subtitle">Nothing on this website is sponsored and there's no advertisements.</p>
             </div>
             <div class="last-updated">
                 <strong>Last Updated:</strong> July 7th, 2025
