--- a/pages/home.html
+++ b/pages/home.html
@@ -69,7 +69,7 @@
             </div>
             <div class="legend-item">
                 <span class="legend-icon">🟡</span>
-                <span class="legend-text">Indicates 'Partially' implemented or has significant caveats.</span>
+                <span class="legend-text">Indicates 'Partially' implemented.</span>
             </div>
             <div class="legend-item">
                 <span class="legend-icon">❌</span>
