--- a/pages/home.html
+++ b/pages/home.html
@@ -61,6 +61,8 @@
         </div>
 
         <div class="services-grid" id="servicesGrid">
+            </div>
+
         <div class="legend-card">
             <h3 class="legend-title">Icon Legend</h3>
             <div class="legend-item">
