--- a/pages/home.html
+++ b/pages/home.html
@@ -3,7 +3,7 @@
         <header>
             <div class="header-content-wrapper">
                 <h1>Privacy Guide</h1>
-                <p class="subtitle">Nothing on this website is sponsored and there's no advertisements.</p>
+                <p class="subtitle">Nothing on this website is sponsored and there's no advertisements. Services are mainly rated by how privacy infringing they are, but other factors are taken into account. This includes lack of security, frequent data breaches, poor moderation, and more.</p>
             </div>
             <div class="last-updated">
                 <strong>Last Updated:</strong> July 7th, 2025
@@ -15,9 +15,9 @@
                 <label for="categoryFilter">Filter by Category</label>
                 <select id="categoryFilter">
                     <option value="all">All Categories</option>
-                    <option value="social">Social Media</option>
                     <option value="messaging">Messaging</option>
                     <option value="search">Search Engines</option>
+                    <option value="social">Social Media</option>
                 </select>
             </div>
 
