--- a/pages/home.html
+++ b/pages/home.html
@@ -49,10 +49,25 @@
             <button class="theme-toggle">🌙 Dark Mode</button>
         </div>
 
-        <div class="stats">
+        <div class="stats" id="stats">
             <div class="stat-card">
                 <div class="stat-number" id="totalServices">0</div>
                 <div class="stat-label">Total Services</div>
+            </div>
+            <div class="legend-card">
+                <h3 class="legend-title">Icon Legend</h3>
+                <div class="legend-item">
+                    <span class="legend-icon">✅</span>
+                    <span class="legend-text">Indicates 'Yes' or 'Fully'.</span>
+                </div>
+                <div class="legend-item">
+                    <span class="legend-icon">🟡</span>
+                    <span class="legend-text">Indicates 'Partially'.</span>
+                </div>
+                <div class="legend-item">
+                    <span class="legend-icon">❌</span>
+                    <span class="legend-text">Indicates 'No' or 'None'.</span>
+                </div>
             </div>
             <div class="stat-card">
                 <div class="stat-number" id="averageRating">0.0</div>
@@ -62,22 +77,6 @@
 
         <div class="services-grid" id="servicesGrid">
             </div>
-
-        <div class="legend-card">
-            <h3 class="legend-title">Icon Legend</h3>
-            <div class="legend-item">
-                <span class="legend-icon">✅</span>
-                <span class="legend-text">Indicates 'Yes' or 'Fully' implemented.</span>
-            </div>
-            <div class="legend-item">
-                <span class="legend-icon">🟡</span>
-                <span class="legend-text">Indicates 'Partially' implemented.</span>
-            </div>
-            <div class="legend-item">
-                <span class="legend-icon">❌</span>
-                <span class="legend-text">Indicates 'No' or 'None'.</span>
-            </div>
-        </div>
 
     </div>
 </div>
