--- a/pages/services/bing.html
+++ b/pages/services/bing.html
@@ -20,7 +20,7 @@
             <p class="detail-summary">Bing is Microsoft's answer to Google Search. It is deeply integrated into the Microsoft ecosystem and leverages user data for advertising and its AI chatbot, Copilot.</p>
             <h3 class="detail-section-title">Pros & Cons</h3>
             <div class="concerns-grid">
-                <div class="concern-item"><div class="concern-icon">✅</div><div class="concern-text"><strong>Data Portability:</strong> You can request to access and delete your personal data via the Microsoft Privacy Dashboard.</div></div>
+                <div class="concern-item"><div class="concern-icon">✅</div><div class="concern-text"><strong>Data Deletion:</strong> You can request to access and delete your personal data via the Microsoft Privacy Dashboard.</div></div>
                 <div class="concern-item"><div class="concern-icon">✅</div><div class="concern-text"><strong>Ad Controls:</strong> You can opt out of targeted advertising.</div></div>
                 <div class="concern-item"><div class="concern-icon">✅</div><div class="concern-text"><strong>GDPR Compliance:</strong> Bing claims to be GDPR compliant for its European users.</div></div>
                 <div class="concern-item"><div class="concern-icon">✅</div><div class="concern-text"><strong>Transparent Policy:</strong> Their Privacy Policy explains in detail what data is collected, used, and shared.</div></div>
