--- a/pages/services/bluesky.html
+++ b/pages/services/bluesky.html
@@ -21,7 +21,7 @@
             <h3 class="detail-section-title">Pros & Cons</h3>
             <div class="concerns-grid">
                 <div class="concern-item"><div class="concern-icon">✅</div><div class="concern-text"><strong>Data Ownership:</strong> Users can self-host Personal Data Servers (PDS), truly owning their data and social identity, with options to import/export it.</div></div>
-                <div class="concern-item"><div class="concern-icon">✅</div><div class="concern-text"><strong>No Advertisements:</strong> The platform is currently ad-free.</div></div>
+                <div class="concern-item"><div class="concern-icon">✅</div><div class="concern-text"><strong>No Advertisements:</strong> The platform is ad-free. While ads are “not necessarily off the table,” any future implementation would be limited, optional, and non-intrusive.</div></div>
                 <div class="concern-item"><div class="concern-icon">✅</div><div class="concern-text"><strong>Fully Open Source:</strong> The underlying AT Protocol and client applications are open source, allowing for public scrutiny and development.</div></div>
                 <div class="concern-item"><div class="concern-icon">✅</div><div class="concern-text"><strong>Communication Opt-Out:</strong> You can opt out of receiving promotional communications.</div></div>
                 <div class="concern-item"><div class="concern-icon">✅</div><div class="concern-text"><strong>Data Portability:</strong> You can request access to and deletion of your data from a hosted PDS.</div></div>
