--- a/pages/services/facebook.html
+++ b/pages/services/facebook.html
@@ -22,12 +22,12 @@
             <div class="concerns-grid">
                 <div class="concern-item"><div class="concern-icon">✅</div><div class="concern-text"><strong>Tor Availability:</strong> For users seeking higher anonymity, Facebook can be accessed via its own Tor onion service.</div></div>
                 <div class="concern-item"><div class="concern-icon">✅</div><div class="concern-text"><strong>Partially Open Source:</strong> While the core platform is proprietary, Meta has released some significant projects as open source (e.g., React), allowing for some transparency.</div></div>
-                <div class="concern-item"><div class="concern-icon">❌</div><div class="concern-text"><strong>Extreme Data Collection:</strong> Collects vast amounts of personal data including posts, messages, location data, Browse history, and behavioral patterns.</div></div>
+                <div class="concern-item"><div class="concern-icon">❌</div><div class="concern-text"><strong>Extreme Data Collection:</strong> Collects vast amounts of personal data including posts, messages, location data, browse history, and behavioral patterns.</div></div>
                 <div class="concern-item"><div class="concern-icon">❌</div><div class="concern-text"><strong>Third-Party Data Sharing:</strong> Your data is shared with thousands of third-party advertisers, developers, and partners.</div></div>
-                <div class="concern-item"><div class="concern-icon">❌</div><div class="concern-text"><strong>Shadow Profiles:</strong> Creates profiles even for non-users through data collected from users' contacts and web tracking.</div></div>
-                <div class="concern-item"><div class="concern-icon">❌</div><div class="concern-text"><strong>History of Scandals:</strong> Known for major privacy violations like the Cambridge Analytica scandal, demonstrating a disregard for user privacy.</div></div>
+                <div class="concern-item"><div class="concern-icon">❌</div><div class="concern-text"><strong>Data Collection Off of Facebook:</strong> Data about you is stored even if you don't have Facebook or a Facebook account. For example, if your friend has Facebook on their phone and they give Facebook access to their contacts, now Facebook may know your phone number and real name.</div></div>
+                <div class="concern-item"><div class="concern-icon">❌</div><div class="concern-text"><strong>History of Scandals:</strong> Known for major scandals like the Cambridge Analytica scandal, Project Ghostbusters, and pirating over 80 terabytes of copyrighted books for AI training.</div></div>
                 <div class="concern-item"><div class="concern-icon">❌</div><div class="concern-text"><strong>Cross-Platform Tracking:</strong> Data is combined and tracked across Facebook, Instagram, WhatsApp, and other Meta properties to build a comprehensive user profile.</div></div>
-                <div class="concern-item"><div class="concern-icon">❌</div><div class="concern-text"><strong>No E2E Encryption by Default:</strong> Messenger conversations are not end-to-end encrypted by default, allowing Meta to access message content.</div></div>
+                <div class="concern-item"><div class="concern-icon">❌</div><div class="concern-text"><strong>No E2E Encryption by Default:</strong> Messenger conversations are not end-to-end encrypted by default, allowing Meta to access private messages. Deleted posts andd messages aren't really deleted and are most likely stored on a backup server.</div></div>
             </div>
             <h3 class="detail-section-title">Evidence & Sources</h3>
             <div class="links-container">
@@ -42,3 +42,4 @@
         </div>
     </div>
 </div>
+ 
