--- a/pages/services/google.html
+++ b/pages/services/google.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="detail-content">
-            <p class="detail-summary">Google Search is the most widely used search engine globally, acting as the cornerstone of Google's vast advertising and data-profiling business.</p>
+            <p class="detail-summary">Google Search is the most visited website of all time, and is currently the most popular website..</p>
             <h3 class="detail-section-title">Pros & Cons</h3>
             <div class="concerns-grid">
                 <div class="concern-item"><div class="concern-icon">✅</div><div class="concern-text"><strong>Data Portability:</strong> You can request access to and deletion of your data through Google Takeout.</div></div>
