--- a/pages/services/discord.html
+++ b/pages/services/discord.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="detail-content">
-            <p class="detail-summary">Discord collects extensive user data including messages, voice communications, and behavioral patterns for advertising and analytics purposes. Only their voice call feature is end-to-end encrypted. Sending text messages and files is NOT end-to-end encrypted (E2E for short).</p>
+            <p class="detail-summary">Discord is a free communication platform that allows users to create servers and chat via text, voice, or video. Discord is often used by gaming and online communities.</p>
             <h3 class="detail-section-title">Pros & Cons</h3>
             <div class="concerns-grid">
                 <div class="concern-item"><div class="concern-icon">✅</div><div class="concern-text"><strong>E2E Encrypted Voice Calls:</strong> Voice calls are end-to-end encrypted. However, voice calling has been around since May 2015, and end-to-end encryption got added in September 2024. That means for almost a decade, voice calls have NOT been end-to-end encrypted.</div></div>
