--- a/pages/home.html
+++ b/pages/home.html
@@ -3,10 +3,10 @@
         <header>
             <div class="header-content-wrapper">
                 <h1>Privacy Guide</h1>
-                <p class="subtitle">Nothing on this website is sponsored and there's no advertisements. Services are mainly rated by how privacy infringing they are, but other factors are taken into account. This includes lack of security, frequent data breaches, poor moderation, and more. Most text on this website was written by AI to reduce the potential for stylometry. I say this in case you wonder why most text on this website feels AI generated.</p>
+                <p class="subtitle">Nothing on this website is sponsored and there's no advertisements. Services are mainly rated by how privacy infringing they are, but other factors are taken into account. This includes lack of security, frequent data breaches, poor moderation, and more.</p>
             </div>
             <div class="last-updated">
-                <strong>Last Updated:</strong> July 8th, 2025
+                <strong>Last Updated:</strong> July 7th, 2025
             </div>
         </header>
 
